# coursework

./: CMakeLists.txt  main.cpp
modules/: pr4ctice.cpp  pr4ctice.h  pract1ce.cpp  pract1ce.h  practic3.cpp  practic3.h  practice2.cpp  practice2.h
