cmake_minimum_required(VERSION 3.23)
project(coursework)

set(CMAKE_CXX_STANDARD 14)

add_executable(coursework main.cpp
        modules/pract1ce.cpp
        modules/pract1ce.h
        modules/practice2.cpp
        modules/practice2.h
        modules/practic3.cpp
        modules/practic3.h
        modules/pr4ctice.cpp
        modules/pr4ctice.h)
